--- a/src/Responsive/Mobile/Mobile.scss
+++ b/src/Responsive/Mobile/Mobile.scss
@@ -296,6 +296,7 @@
 
     .login-and-signup-container {
         background: #324B4C;
+        min-height: 1000px;
 
         .swap-image {
             display: none;
@@ -303,32 +304,44 @@
 
         .entries-project-logo {
             top: 5%;
-            left: 35%;
+            left: 30%;
 
             img {
-                width: 100px;
-                height: 150px;
+                width: 125px;
+                height: 175px;
             }
         }
 
         .entries-container {
-            top: 30%;
-            left: 20%;
             min-height: 400px;
 
             .login-container {
+                top: 25%;
+                left: 30%;
+
                 .tab {
                     font-size: 1rem;
                 }
             }
 
             .login-form {
+                top: 30%;
+                left: 15%;
+
                 .group {
                     .user {
                         font-size: 12px;
                     }
 
+                    .email {
+                        font-size: 12px;
+                    }
+
                     .password {
+                        font-size: 12px;
+                    }
+
+                    .email{
                         font-size: 12px;
                     }
 
@@ -358,32 +371,51 @@
             }
 
             .signup-container {
+                top: 30%;
+
                 .signup-form {
-                    .group {
-                        margin-bottom: 0;
+                    &-user-entry-info {
+                        display: flex;
+                        flex-direction: column;
 
-                        .user {
-                            font-size: 12px;
-                            margin-top: 0.5rem;
-                            margin-bottom: 5px;
-                        }
+                        .group {
+                            margin-bottom: 0;
 
-                        .password {
-                            font-size: 12px;
-                            margin-top: 0.5rem;
-                            margin-bottom: 5px;
-                        }
+                            .user {
+                                font-size: 12px;
+                                margin-top: 0.5rem;
+                                margin-bottom: 5px;
+                            }
 
-                        .repeat-password {
-                            font-size: 12px;
-                        }
+                            .password {
+                                font-size: 12px;
+                                margin-top: 0.5rem;
+                                margin-bottom: 5px;
+                            }
 
-                        .email {
-                            font-size: 12px;
-                        }
+                            .repeat-password {
+                                font-size: 12px;
+                            }
 
-                        .input-log-sign {
-                            padding: 11px 1rem;
+                            .email {
+                                font-size: 12px;
+                            }
+
+                            .gender{
+                                font-size: 12px;
+                            }
+
+                            .address{
+                                font-size: 12px;
+                            }
+
+                            .contact-num{
+                                font-size: 12px;
+                            }
+
+                            .input-log-sign {
+                                padding: 11px 1rem;
+                            }
                         }
                     }
 
