--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,7 +4,7 @@
 header {
   width: 100%;
   height: max-content;
-  position: sticky;
+  position: relative;
 
   .uswapp-header {
     height: inherit;
@@ -118,6 +118,7 @@ header {
             .unselected-flag {
               width: 2rem;
               height: 2rem;
+              background: none;
             }
           }
         }
@@ -247,58 +248,144 @@ header {
       }
     }
 
+    .product-btns-container {
+
+      .product-btns-wrapper {
+        all: unset;
+        display: flex;
+        align-items: center;
+        position: relative;
+        padding: 0.4em 1em;
+        border: mediumspringgreen solid 0.15em;
+        border-radius: 0.3em;
+        color: rgba(255, 255, 255, 0.7);
+        background-color: #545454;
+        font-size: 20px;
+        font-weight: 600;
+        cursor: pointer;
+        overflow: hidden;
+        transition: border 300ms, color 300ms;
+        user-select: none;
+
+        p {
+          z-index: 1;
+        }
+
+        &:hover {
+          color: #212121;
+
+          &::before {
+            transform: translateX(-1em);
+          }
+
+          &::after {
+            transform: translateX(1em);
+          }
+        }
+
+        &:active {
+          border-color: teal;
+
+          &::before,
+          &::after {
+            background: teal;
+          }
+        }
+
+        &::after,
+        &::before {
+          content: "";
+          position: absolute;
+          width: 9em;
+          aspect-ratio: 1;
+          background: mediumspringgreen;
+          opacity: 50%;
+          border-radius: 50%;
+          transition: transform 500ms, background 300ms;
+        }
+
+        ::before {
+          left: 0;
+          transform: translateX(-8em);
+        }
+
+        &::after {
+          right: 0;
+          transform: translateX(8em);
+        }
+      }
+
+      .product-btns {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        background-color: red;
+        border-radius: 5px;
+        top: 100px;
+        right: auto;
+
+        button {
+          height: 2rem;
+          margin-top: 1rem;
+          cursor: pointer;
+          background-color: #004AAC;
+          color: $base-color1;
+          font-size: 18px;
+          text-wrap: nowrap;
+          border-radius: 3px;
+          border: 2px solid #000;
+          transition: all 500ms ease-in-out;
+
+          &:hover {
+            transform: scale(1.05);
+
+            &::before {
+              animation: shine 1.5s ease-in-out infinite;
+            }
+          }
+
+          &::before {
+            content: "";
+            position: absolute;
+            width: 100px;
+            height: 100%;
+            background-image: linear-gradient(120deg,
+                rgba(255, 255, 255, 0) 30%,
+                rgba(255, 255, 255, 0.8),
+                rgba(255, 255, 255, 0) 70%);
+            top: 0;
+            left: -100px;
+            opacity: 0.6;
+          }
+
+          @keyframes shine {
+            0% {
+              left: -100px;
+            }
+
+            60% {
+              left: 100%;
+            }
+
+            to {
+              left: 100%;
+            }
+          }
+        }
+      }
+    }
+
     .user-contents {
       display: flex;
-      flex-basis: 400px;
       align-items: center;
       justify-content: space-around;
 
-      .notifications {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 0.5rem;
-        cursor: pointer;
-
-        .notifications-icon {
-          svg {
-            width: 1.5rem;
-            height: 1.5rem;
-            background-color: #183153;
-            border-radius: 50%;
-            color: $base-color1;
-          }
-        }
-
-      }
-
-      .settings {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 0.5rem;
-        cursor: pointer;
-
-        .settings-icon {
-          svg {
-            width: 1.5rem;
-            height: 1.5rem;
-            background-color: #183153;
-            border-radius: 50%;
-            color: $base-color1;
-          }
-        }
-
-
-      }
-
       .user-log {
-
         .account {
           display: flex;
           flex-direction: column;
           align-items: center;
-          margin-top: 1rem;
           cursor: pointer;
 
           .user-icon {
@@ -316,27 +403,94 @@ header {
               margin-left: 4px;
             }
           }
+
+          .open-profile-menu {
+            background-color: #2E3338;
+            color: $base-color1;
+            border: 1px solid transparent;
+            border-radius: 10%;
+            position: absolute;
+            top: 90px;
+            padding: 10px;
+
+            .username-and-mail {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              margin-top: 5px;
+              margin-bottom: 5px;
+
+              span {
+                line-height: 18px;
+              }
+            }
+
+            .user-special-btns {
+              display: flex;
+              align-items: center;
+              justify-content: space-evenly;
+
+              .notifications {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin-top: 0.5rem;
+                cursor: pointer;
+
+                .notifications-icon {
+                  svg {
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    background-color: transparent;
+                    border-radius: 50%;
+                    color: $base-color1;
+                  }
+                }
+
+              }
+
+              .settings {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin-top: 0.5rem;
+                cursor: pointer;
+
+                .settings-icon {
+                  svg {
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    background-color: transparent;
+                    border-radius: 50%;
+                    color: $base-color1;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .log-out {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      cursor: pointer;
+      margin-right: 1rem;
+
+      .logout-icon {
+        margin-top: 0.5rem;
+
+        svg {
+          width: 1.5rem;
+          height: 1.5rem;
         }
       }
 
-      .log-out {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        cursor: pointer;
-
-        .logout-icon {
-          margin-top: 0.5rem;
-
-          svg {
-            width: 1.5rem;
-            height: 1.5rem;
-          }
-        }
-
-        .logout {
-          margin-top: 0.5rem;
-        }
+      .logout {
+        margin-top: 0.5rem;
       }
     }
   }
@@ -410,6 +564,7 @@ section {
 
   .products-container {
     margin-top: 5rem;
+    cursor: pointer;
 
     .product-categories-title {
       margin-left: 2rem;
@@ -422,7 +577,7 @@ section {
       position: relative;
 
       .slick-prev-btn {
-        font-size: 2rem;
+        font-size: 3rem;
         position: absolute;
         left: 4px;
         top: 35%;
@@ -434,7 +589,7 @@ section {
       }
 
       .slick-next-btn {
-        font-size: 2rem;
+        font-size: 3rem;
         position: absolute;
         top: 35%;
         right: 10px;
@@ -1920,5 +2075,22 @@ section {
         }
       }
     }
+  }
+}
+
+.scroll-to-top-btn {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  z-index: 333333;
+
+  .arrow-up {
+    width: 3rem;
+    height: 2.5rem;
+    background-color: $base-color1;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 2px 2px 10px 3px;
+    color: #0252cc;
   }
 }
