--- a/src/Responsive/Mobile/Mobile.scss
+++ b/src/Responsive/Mobile/Mobile.scss
@@ -37,11 +37,32 @@
                             }
                         }
                     }
+
+                    .product-btns {
+                        button {
+                            height: 35px;
+                            margin-top: 3rem;
+                            font-size: 17px;
+
+                            &:last-child {
+                                margin-top: 1.5rem;
+                            }
+                        }
+                    }
                 }
 
                 .log-out {
-                    bottom: 1rem;
-                    right: 1rem;
+                    bottom: 0;
+                    right: 0;
+                }
+            }
+
+            .scroll-to-top-btn {
+                bottom: 0.5rem;
+
+                .arrow-up {
+                    width: 2rem;
+                    height: 1.5rem;
                 }
             }
         }
@@ -341,7 +362,7 @@
                         font-size: 12px;
                     }
 
-                    .email{
+                    .email {
                         font-size: 12px;
                     }
 
@@ -401,15 +422,15 @@
                                 font-size: 12px;
                             }
 
-                            .gender{
+                            .gender {
                                 font-size: 12px;
                             }
 
-                            .address{
+                            .address {
                                 font-size: 12px;
                             }
 
-                            .contact-num{
+                            .contact-num {
                                 font-size: 12px;
                             }
 
