--- a/src/Responsive/Large Mobile-Tablet/LMobile.scss
+++ b/src/Responsive/Large Mobile-Tablet/LMobile.scss
@@ -15,6 +15,24 @@
                 }
             }
 
+            .overlay {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.7);
+                z-index: 4;
+                opacity: 0;
+                visibility: hidden;
+                transition: opacity 350ms ease-in-out;
+
+                &-visible {
+                    opacity: 1;
+                    visibility: visible;
+                }
+            }
+
             .responsive-menu {
                 width: 80%;
                 height: 100%;
@@ -22,7 +40,7 @@
                 z-index: 5;
                 top: 0;
                 right: -105%;
-                background-color: rgba(255, 255, 255, 0.6);
+                background-color: rgba(255, 255, 255, 0.7);
                 backdrop-filter: blur(7px);
                 border-radius: 5px;
                 overflow-x: hidden;
@@ -85,8 +103,19 @@
                         }
                     }
 
+                    .product-btns {
+                        button {
+                            height: 2.5rem;
+                            margin-top: 3rem;
+                            font-size: 20px;
+
+                            &:last-child {
+                                margin-top: 2rem;
+                            }
+                        }
+                    }
+
                     .notifications {
-                        gap: 5px;
                         margin-top: 3rem;
 
                         .notifications-icon {
@@ -96,24 +125,16 @@
                             }
                         }
 
-                        .notifications-text {
-                            font-size: 1rem;
-                        }
                     }
 
                     .settings {
                         margin-top: 3rem;
-                        gap: 5px;
 
                         .settings-icon {
                             svg {
                                 width: 2rem;
                                 height: 2rem;
                             }
-                        }
-
-                        .settings-text {
-                            font-size: 1rem;
                         }
                     }
 
@@ -271,7 +292,7 @@
 
                 .log-out {
                     position: absolute;
-                    bottom: 20%;
+                    bottom: 5%;
                     right: 2rem;
                     display: flex;
                     flex-direction: column;
@@ -320,6 +341,11 @@
                     width: 22px;
                     height: 22px;
                 }
+            }
+
+            .scroll-to-top-btn {
+                bottom: 1rem;
+                right: auto;
             }
         }
     }
@@ -397,7 +423,7 @@
 
             .product-categories-title {
                 margin-left: 20px;
-                font-size: 1.5rem
+                font-size: 1.5rem;
             }
 
             .slider-container {
@@ -405,12 +431,12 @@
 
                 .slick-prev-btn {
                     left: 2px;
-                    font-size: 1.5rem;
+                    font-size: 25px;
                 }
 
                 .slick-next-btn {
                     right: 3px;
-                    font-size: 1.5rem;
+                    font-size: 25px;
                 }
 
                 .slick-slider {
@@ -540,7 +566,7 @@
             top: 5%;
             left: 35%;
 
-            img{
+            img {
                 width: 150px;
                 height: 200px;
             }
@@ -569,7 +595,7 @@
                         font-size: 13px;
                     }
 
-                    .email{
+                    .email {
                         font-size: 13px;
                     }
 
@@ -599,7 +625,7 @@
             .signup-container {
                 top: 40%;
                 left: 15%;
-        
+
                 .signup-form {
                     .group {
                         .user {
@@ -618,15 +644,15 @@
                             font-size: 13px;
                         }
 
-                        .gender{
+                        .gender {
                             font-size: 13px;
                         }
 
-                        .address{
+                        .address {
                             font-size: 13px;
                         }
 
-                        .contact-num{
+                        .contact-num {
                             font-size: 13px;
                         }
 
@@ -654,7 +680,7 @@
             }
 
 
-            .hr{
+            .hr {
                 margin: 10px 20px 0 2rem;
             }
         }
@@ -807,7 +833,7 @@
     }
 
     section {
-        .product-view-container {       
+        .product-view-container {
             .product-view {
                 &-images {
                     grid-template-columns: repeat(3, 1fr);
