--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -320,14 +320,16 @@ header {
         flex-direction: column;
         align-items: center;
         position: absolute;
-        background-color: red;
+        background-color: rgba(0, 0, 0, 0.25);
         border-radius: 5px;
-        top: 100px;
+        top: 95px;
         right: auto;
+        padding: 5px;
 
         button {
+          width: max-content;
           height: 2rem;
-          margin-top: 1rem;
+          margin-top: 12px;
           cursor: pointer;
           background-color: #004AAC;
           color: $base-color1;
@@ -339,38 +341,6 @@ header {
 
           &:hover {
             transform: scale(1.05);
-
-            &::before {
-              animation: shine 1.5s ease-in-out infinite;
-            }
-          }
-
-          &::before {
-            content: "";
-            position: absolute;
-            width: 100px;
-            height: 100%;
-            background-image: linear-gradient(120deg,
-                rgba(255, 255, 255, 0) 30%,
-                rgba(255, 255, 255, 0.8),
-                rgba(255, 255, 255, 0) 70%);
-            top: 0;
-            left: -100px;
-            opacity: 0.6;
-          }
-
-          @keyframes shine {
-            0% {
-              left: -100px;
-            }
-
-            60% {
-              left: 100%;
-            }
-
-            to {
-              left: 100%;
-            }
           }
         }
       }
@@ -421,8 +391,12 @@ header {
               margin-top: 5px;
               margin-bottom: 5px;
 
-              span {
-                line-height: 18px;
+              a {
+                color: $base-color1;
+                
+                span {
+                  line-height: 18px;
+                }
               }
             }
 
