--- a/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
+++ b/src/Responsive/Large Laptop-Large Desktop/Desktop.scss
@@ -57,13 +57,21 @@
                 }
             }
 
-            .product-btns {
-                button{
-                    font-size: 15px;
-                    font-weight: 600;
+            .product-btns-container {
+                .product-btns-wrapper {
+                    padding: 0.3em 0.8em;
+                }
 
-                    &:last-child{
-                        margin-top: 12px;
+                .product-btns {
+                    top: 90px;
+
+                    button {
+                        font-size: 15px;
+                        font-weight: 600;
+
+                        &:last-child {
+                            margin-top: 10px;
+                        }
                     }
                 }
             }
@@ -133,7 +141,7 @@
                 }
             }
 
-            .scroll-to-top-btn{
+            .scroll-to-top-btn {
                 left: auto;
             }
         }
